[platform] Unify getComposite/getComposites. Cleanup
GitOrigin-RevId: ea1cd7edaaa8595c420982dfd45013ebc89a5f1c